--- a/src/common/components/AddItemForm/AddItemForm.module.css
+++ b/src/common/components/AddItemForm/AddItemForm.module.css
@@ -1,7 +1,14 @@
-.textField {
+.inputWrapper {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding-bottom: 5px;
     align-items: flex-start;
+    padding-left: 10px;
+}
+
+.input {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;;
 }
