--- a/src/features/TodolistList/ui/Todolist/Tasks/Task/Task.module.css
+++ b/src/features/TodolistList/ui/Todolist/Tasks/Task/Task.module.css
@@ -1,12 +1,18 @@
 .wrapper {
     display: grid;
-    grid-template-columns: 42px 1fr 42px;
-    margin-bottom: 10px;
-    gap: 10px;
+    grid-template-columns: 42px 1fr 65px;
+    align-items: center;
+
     &:hover {
-        background-color:rgba(233,30,99, 0.1)
+        background-color: rgba(233, 30, 99, 0.1)
     }
 }
+
 .isDone {
     opacity: 0.5;
+}
+
+.checkbox {
+    display: flex;
+    justify-self: center;
 }
