--- a/src/features/TodolistList/ui/Todolist/TodolistTitle/TodolistTitle.module.css
+++ b/src/features/TodolistList/ui/Todolist/TodolistTitle/TodolistTitle.module.css
@@ -2,12 +2,14 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    padding-left: 10px;
     max-width: 300px;
     word-break: break-all;
 }
 
 .iconDelete {
     position: absolute;
-    right: -20px;
+    right: -4px;
+    top: -4px
 }
