--- a/src/features/auth/ui/Login/Login.module.css
+++ b/src/features/auth/ui/Login/Login.module.css
@@ -1,19 +1,19 @@
 .wrapper {
     display: flex;
     justify-content: center;
-    padding-top: 10%;
-}
-
-.formWrapper {
-    width: 500px;
-}
-.label {
-    text-align: center;
-    margin-bottom: 50px;
+    padding-top: 100px;
 }
 
 .form {
-    display: flex;
+    padding: 50px 0;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.input {
+    width: 100%;
+    margin-bottom: 30px;
+    display: inline-block;
 }
 
 .errorMessage {
@@ -22,10 +22,10 @@
 
 .checkbox {
     margin-bottom: 30px;
+    display: flex;
+    gap: 10px;
 }
 
-.input {
+.button {
     width: 100%;
-    margin-bottom: 30px;
-    display: inline-block;
 }
